--- a/_assets/scss/partials/base/_base.scss
+++ b/_assets/scss/partials/base/_base.scss
@@ -123,9 +123,11 @@ Color='#444')";
 
 figure {
 	margin: 0 1rem;
-  // display: inline-block;
+  display: table;
 }
 figcaption {
+	display: table-caption;
+	caption-side: bottom;
   // margin: 10px 0 0 0;
   font-variant: small-caps;
   font-weight: bold;
