--- a/_assets/scss/partials/layout/_post.scss
+++ b/_assets/scss/partials/layout/_post.scss
@@ -137,6 +137,7 @@
 	@media screen and (min-width: 415px) {
 		// padding-left: 1rem;
 		float: right;
+		max-width: 400px;
 		// width: 600px;
 		// height: 100%;
 		padding-bottom: -2rem;
